refactor(codegen): 统一Controller层方法命名规范并优化集合操作
- 重构所有Controller方法命名，采用动词+名词的清晰结构
- 使用Java 16的toList()替代Collectors.toList()简化集合操作
- 保持方法命名风格一致，增强代码可读性
- 优化批量操作方法命名，明确操作对象

Signed-off-by: PIG AI <wangiegie@gmail.com>